--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "build": "npm i && npm run build --prefix client"
+    "build": "npm run build --prefix client"
   },
   "author": "Nico Mora",
   "license": "ISC",
